renamed corridor_servoing into corridor_navigation and Task to ServoingTask

--- a/tasks/CMakeLists.txt
+++ b/tasks/CMakeLists.txt
@@ -1,21 +1,24 @@
-include(corridor_servoingTaskLib)
-ADD_LIBRARY(${CORRIDOR_SERVOING_TASKLIB_NAME} SHARED 
-    ${CORRIDOR_SERVOING_TASKLIB_SOURCES})
+# Generated from orogen/lib/orogen/templates/tasks/CMakeLists.txt
 
-add_dependencies(${CORRIDOR_SERVOING_TASKLIB_NAME}
-    regen-toolkit)
+include(corridor_navigationTaskLib)
+ADD_LIBRARY(${CORRIDOR_NAVIGATION_TASKLIB_NAME} SHARED 
+    ${CORRIDOR_NAVIGATION_TASKLIB_SOURCES})
+
+add_dependencies(${CORRIDOR_NAVIGATION_TASKLIB_NAME}
+    regen-typekit)
 
 
-TARGET_LINK_LIBRARIES(${CORRIDOR_SERVOING_TASKLIB_NAME}
+TARGET_LINK_LIBRARIES(${CORRIDOR_NAVIGATION_TASKLIB_NAME}
     ${OrocosRTT_LIBRARIES}
-    ${CORRIDOR_SERVOING_TASKLIB_DEPENDENT_LIBRARIES})
-SET_TARGET_PROPERTIES(${CORRIDOR_SERVOING_TASKLIB_NAME}
-    PROPERTIES LINK_INTERFACE_LIBRARIES "${CORRIDOR_SERVOING_TASKLIB_INTERFACE_LIBRARIES}")
+    ${CORRIDOR_NAVIGATION_TASKLIB_DEPENDENT_LIBRARIES})
+SET_TARGET_PROPERTIES(${CORRIDOR_NAVIGATION_TASKLIB_NAME}
+    PROPERTIES LINK_INTERFACE_LIBRARIES "${CORRIDOR_NAVIGATION_TASKLIB_INTERFACE_LIBRARIES}")
 
-INSTALL(TARGETS ${CORRIDOR_SERVOING_TASKLIB_NAME}
+INSTALL(TARGETS ${CORRIDOR_NAVIGATION_TASKLIB_NAME}
     RUNTIME DESTINATION bin
     LIBRARY DESTINATION lib/orocos)
 
-INSTALL(FILES ${CORRIDOR_SERVOING_TASKLIB_HEADERS}
-    DESTINATION include/orocos/corridor_servoing)
+INSTALL(FILES ${CORRIDOR_NAVIGATION_TASKLIB_HEADERS}
+    DESTINATION include/orocos/corridor_navigation)
+
 
