--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-PROJECT(corridor_servoing)
+PROJECT(corridor_navigation)
 cmake_minimum_required(VERSION 2.6)
 
 SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/.orogen/config")
-INCLUDE(corridor_servoingBase)
+INCLUDE(corridor_navigationBase)
 
 # FIND_PACKAGE(KDL)
 # FIND_PACKAGE(OCL)
